--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -130,3 +130,33 @@ nav {
     }
   }
 }
+
+/*Nav-and-hero-block*/
+section {
+  background-image: url("/Img/man-g4ed3e5c37_1920.jpg");
+
+  .hero {
+    height: 100vh;
+
+    div {
+      height: 100%;
+      width: 50vw;
+      background-color: transparent(50%);
+      position: relative;
+
+      div {
+        height: fit-content;
+        width: 80%;
+        margin: auto;
+        position: absolute;
+        top: 25%;
+        left: 15%;
+        padding: 0 2rem;
+
+        p {
+          font-weight: 100;
+        }
+      }
+    }
+  }
+}
