--- a/Components/Nav-and-hero-block.html
+++ b/Components/Nav-and-hero-block.html
@@ -1,4 +1,4 @@
-<section>
+<section class="Nav-and-hero-block">
   <nav>
     <a aria-label="Fitix" href="/"><img src="/Img/Logo.svg" alt="" /></a>
     <ul>
