--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,7 +73,7 @@ h3 {
 /*Input*/
 .input {
   font-size: 3rem;
-  padding: 1rem 0;
+  padding: 1rem 1rem;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   border-color: #ffffff;
@@ -238,7 +238,24 @@ nav a:hover {
 
 .calorie-img {
   background-image: url(/Img/training-g31cb64642_1920.jpg);
-  height: 100%;
+  height: 100vh;
+}
+
+/*membership-block*/
+.membership-block {
+  color: black;
+  text-align: center;
+}
+.membership-block p {
+  font-size: 3.6rem;
+  font-weight: bold;
+}
+.membership-block h4 {
+  font-size: 7.2rem;
+}
+.membership-block .membership-block__heading {
+  background-color: #0d86ca;
+  box-shadow: 10px 10px white;
 }
 
 /*# sourceMappingURL=style.css.map */
