--- a/Components/Calorie-calculater-block.html
+++ b/Components/Calorie-calculater-block.html
@@ -2,29 +2,37 @@
   <article class="Carlorie-tracker">
     <div class="calorie-calculater">
       <h3>Day calorie calculater</h3>
-      <label for="html">Age</label
-      ><input type="text" class="input" id="Age" placeholder="Age..." />
-
+      <label for="html">Age</label><br /><input
+        type="text"
+        class="input"
+        id="Age"
+        placeholder="Age..."
+      />
+      <br />
       <label for="html">Height</label>
+      <br />
       <input
         type="text"
         class="input"
         id="Height"
         placeholder="Heigh in cm..."
       />
-
+      <br />
       <label for="html">Weight</label>
+      <br />
       <input
         type="text"
         class="input"
         id="Weight"
         placeholder="Weight in Kg..."
       />
+      <br />
       <label for="cars">Gender</label>
       <select name="cars" id="Gender">
         <option value="Male">Male</option>
         <option value="Female">Female</option>
       </select>
+      <br />
       <button class="btn" id="Btn-calc">Calculate</button>
       <div>
         <p>Daily Calorie intake:</p>
