--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -31,7 +31,7 @@
 
 %input-shared {
   font-size: 3rem;
-  padding: 1rem 0;
+  padding: 1rem 1rem;
   font-family: $font-body;
   font-weight: 300;
   border-color: $Color-body;
@@ -212,5 +212,22 @@ nav {
 .calorie-img {
   background-image: url(/Img/training-g31cb64642_1920.jpg);
 
-  height: 100%;
+  height: 100vh;
+}
+/*membership-block*/
+.membership-block {
+  color: $Color-primary;
+  text-align: center;
+  p {
+    font-size: 3.6rem;
+    font-weight: bold;
+  }
+  h4 {
+    font-size: 7.2rem;
+  }
+
+  .membership-block__heading {
+    background-color: $Color-secondery;
+    box-shadow: 10px 10px white;
+  }
 }
