--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,6 +49,11 @@ h3 {
   grid-template-columns: repeat(2, 1fr);
 }
 
+.grid--1x2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
 /*buttons*/
 .btn {
   border-radius: 10px;
@@ -254,8 +259,36 @@ nav a:hover {
   font-size: 7.2rem;
 }
 .membership-block .membership-block__heading {
-  background-color: #0d86ca;
+  background-color: black;
   box-shadow: 10px 10px white;
+  color: #ffffff;
+}
+
+/*Footer*/
+footer {
+  padding: 5rem;
+  background-color: black;
+}
+footer .footer__logo {
+  text-align: center;
+  padding-right: 5rem;
+}
+footer h5 {
+  font-family: "Poppins", sans-serif;
+  font-size: 3.6rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+footer ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+footer a {
+  color: gray;
+}
+footer a:hover {
+  color: #0d86ca;
 }
 
 /*# sourceMappingURL=style.css.map */
