Make the Nav-and-hero-block mobile friendly.

--- a/Components/Nav-and-hero-block.html
+++ b/Components/Nav-and-hero-block.html
@@ -1,15 +1,20 @@
 <section class="Nav-and-hero-block">
-  <nav>
-    <a aria-label="Fitix" href="/"><img src="/Img/Logo.svg" alt="" /></a>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Diet plans</a></li>
-      <li><a href="#">Exercises</a></li>
-    </ul>
+  <nav class="nav">
+    <a class="nav__logo" aria-label="Fitix" href="/"
+      ><img src="/Img/Logo.svg" alt=""
+    /></a>
+    <img class="nav__icon" id="menu-icon" src="/Img/menu.svg" alt="" />
+    <div class="nav__content">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Diet plans</a></li>
+        <li><a href="#">Exercises</a></li>
+      </ul>
+    </div>
   </nav>
   <div class="hero">
-    <div class="trasparent">
-      <div>
+    <div class="hero__trasparent-block">
+      <div class="hero__content">
         <h1>Health is wealth</h1>
         <p>
           All in one at Fitix, get the latest exercises, diets, workout plans,
