--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,16 +44,6 @@ h3 {
   font-size: 4.5rem;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--1x2 {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-}
-
 /*buttons*/
 .btn {
   border-radius: 10px;
@@ -144,45 +134,51 @@ h3 {
 }
 
 /*Nav-block*/
-nav {
+.nav {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0 2rem;
+  padding: 0 0;
   align-items: center;
   background-color: rgba(15, 14, 14, 0.7);
 }
-nav ul {
+.nav .nav__icon {
+  display: none;
+  position: absolute;
+}
+.nav ul {
   display: flex;
   list-style: none;
-  margin: 2rem 0rem;
 }
-nav li {
-  padding: 0rem 2rem;
+.nav li {
+  padding-right: 2rem;
 }
-nav a {
+.nav a {
   color: #ffffff;
   font-size: 1.6rem;
   transition: color 0.5s;
 }
-nav a:hover {
+.nav a:hover {
   color: #0d86ca;
 }
 
 /*Nav-and-hero-block*/
 .Nav-and-hero-block {
   background-image: url("/Img/man-g4ed3e5c37_1920.jpg");
+  overflow: hidden;
 }
 .Nav-and-hero-block .hero {
   height: 100vh;
+  overflow: hidden;
 }
-.Nav-and-hero-block .hero div {
-  height: 100%;
+.Nav-and-hero-block .hero .hero__trasparent-block {
+  height: 100vh;
   width: 50vw;
   background-color: rgba(15, 14, 14, 0.5);
   position: relative;
+  overflow: hidden;
 }
-.Nav-and-hero-block .hero div div {
+.Nav-and-hero-block .hero .hero__trasparent-block .hero__content {
   height: fit-content;
   width: 80%;
   margin: auto;
@@ -191,7 +187,7 @@ nav a:hover {
   left: 15%;
   padding: 0 2rem;
 }
-.Nav-and-hero-block .hero div div p {
+.Nav-and-hero-block .hero .hero__trasparent-block .hero__content p {
   font-weight: 100;
 }
 
@@ -289,6 +285,62 @@ footer a {
 }
 footer a:hover {
   color: #0d86ca;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--1x2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/*Nav-block*/
+@media screen and (max-width: 700px) {
+  .nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .nav .nav__icon {
+    height: 6rem;
+    display: flex;
+    top: 0.75rem;
+    right: 1rem;
+    background-color: white;
+  }
+  .nav .nav__content {
+    width: 100%;
+    height: 0rem;
+    overflow: hidden;
+  }
+  .nav ul {
+    width: 100%;
+    flex-direction: column;
+    padding: 0;
+    text-align: center;
+    margin: 0;
+  }
+  .nav .nav__content-open {
+    height: 100%;
+  }
+}
+/*Nav-and-hero-block*/
+@media screen and (max-width: 700px) {
+  .Nav-and-hero-block {
+    overflow: auto;
+  }
+  .Nav-and-hero-block .hero {
+    overflow: auto;
+  }
+  .Nav-and-hero-block .hero .hero__trasparent-block {
+    width: 100vw;
+    overflow: auto;
+  }
+  .Nav-and-hero-block .hero .hero__trasparent-block .hero__content {
+    left: 10%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
