--- a/Components/Nav-block.html
+++ b/Components/Nav-block.html
@@ -1,8 +1,13 @@
-<nav>
-  <a aria-label="Fitix" href="/"><img src="/Img/Logo.svg" alt="" /></a>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Diet plans</a></li>
-    <li><a href="#">Exercises</a></li>
-  </ul>
+<nav class="nav">
+  <a class="nav__logo" aria-label="Fitix" href="/"
+    ><img src="/Img/Logo.svg" alt=""
+  /></a>
+  <img class="nav__icon" id="menu-icon" src="/Img/menu.svg" alt="" />
+  <div class="nav__content">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Diet plans</a></li>
+      <li><a href="#">Exercises</a></li>
+    </ul>
+  </div>
 </nav>
