--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -7,3 +7,52 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+
+/*Nav-block*/
+
+@media screen and (max-width: 700px) {
+  .nav {
+    flex-direction: column;
+    align-items: flex-start;
+    .nav__icon {
+      height: 6rem;
+      display: flex;
+      top: 0.75rem;
+      right: 1rem;
+      background-color: white;
+    }
+    .nav__content {
+      width: 100%;
+      height: 0rem;
+      overflow: hidden;
+    }
+    ul {
+      width: 100%;
+      flex-direction: column;
+      padding: 0;
+      text-align: center;
+
+      margin: 0;
+    }
+    .nav__content-open {
+      height: 100%;
+    }
+  }
+}
+
+/*Nav-and-hero-block*/
+@media screen and (max-width: 700px) {
+  .Nav-and-hero-block {
+    overflow: auto;
+    .hero {
+      overflow: auto;
+      .hero__trasparent-block {
+        width: 100vw;
+        overflow: auto;
+        .hero__content {
+          left: 10%;
+        }
+      }
+    }
+  }
+}
