--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -1,9 +1,14 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
 }
 
 .grid--1x2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--1x4 {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
@@ -56,5 +61,34 @@
         }
       }
     }
+  }
+}
+
+/*Local-gym-block*/
+@media screen and (max-width: 700px) {
+  .Local-gym-block {
+    overflow: hidden;
+  }
+  .Local-gym-block__content {
+    max-width: 370px;
+    margin: 0 auto;
+
+    .input-group {
+      max-width: inherit;
+      .input-group-input {
+        width: 40vw;
+      }
+      ::placeholder {
+        font-size: 1.6rem;
+      }
+    }
+
+    .btn {
+      width: 90%;
+    }
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
