--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -97,6 +97,12 @@
       margin-right: 2rem;
     }
   }
+  ::placeholder {
+    font-size: 2rem;
+  }
+  .btn {
+    font-size: 2.5rem;
+  }
 }
 
 #map {
