--- a/Components/Calorie-calculater-block.html
+++ b/Components/Calorie-calculater-block.html
@@ -1,31 +1,18 @@
-<section class="calorie-calculater-block grid">
-  <article class="Carlorie-tracker">
-    <div class="calorie-calculater">
+<section class="calorie-calculater-block grid grid--1x2">
+  <div class="calorie-calculater-block__tracker">
+    <div class="calorie-calculater-block__calculater">
       <h3>Day calorie calculater</h3>
-      <label for="html">Age</label><br /><input
-        type="text"
-        class="input"
-        id="Age"
-        placeholder="Age..."
-      />
+      <label for="html">Age</label>
+      <br />
+      <input type="text" class="input" placeholder="Age..." />
       <br />
       <label for="html">Height</label>
       <br />
-      <input
-        type="text"
-        class="input"
-        id="Height"
-        placeholder="Heigh in cm..."
-      />
+      <input type="text" class="input" placeholder="Heigh in cm..." />
       <br />
       <label for="html">Weight</label>
       <br />
-      <input
-        type="text"
-        class="input"
-        id="Weight"
-        placeholder="Weight in Kg..."
-      />
+      <input type="text" class="input" placeholder="Weight in Kg..." />
       <br />
       <label for="cars">Gender</label>
       <select name="cars" id="Gender">
@@ -39,6 +26,6 @@
         <p id="Day-calorie"></p>
       </div>
     </div>
-  </article>
-  <article class="calorie-img"></article>
+  </div>
+  <div class="calorie-calculater-block__img"></div>
 </section>
