--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -92,3 +92,22 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+/*Calorie-tracker-block*/
+@media screen and (max-width: 700px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  input {
+    width: 60vw;
+  }
+
+  .calorie-calculater-block__img {
+    background-repeat: no-repeat;
+
+    background-size: 100% 100%;
+    height: 100vh;
+  }
+}
