Make the membership-block mobile friendly.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -405,5 +405,11 @@ footer a:hover {
     height: 100vh;
   }
 }
+/*membership-block*/
+@media screen and (max-width: 700px) {
+  .membership-block h4 {
+    font-size: 5rem;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
