--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -111,3 +111,12 @@
     height: 100vh;
   }
 }
+
+/*membership-block*/
+@media screen and (max-width: 700px) {
+  .membership-block {
+    h4 {
+      font-size: 5rem;
+    }
+  }
+}
