Make the footer-block mobile friendly.

--- a/Components/Footer-block.html
+++ b/Components/Footer-block.html
@@ -1,23 +1,23 @@
-<footer class="grid--1x2">
-  <section class="footer__logo">
+<footer class="footer-block grid--1x4 grid">
+  <section class="footer-block__logo">
     <img src="/Img/Logo-vertical.svg" alt="" />
     <p>Copyright 2021 Jograj singh</p>
   </section>
-  <section>
+  <section class="footer-block__content">
     <h5>About us</h5>
     <ul>
       <li><a href="#"> About us </a></li>
       <li><a href="#">Membership discount</a></li>
     </ul>
   </section>
-  <section>
+  <section class="footer-block__content">
     <h5>Customer services</h5>
     <ul>
       <li><a href="#">FAQ</a></li>
       <li><a href="">Contact us</a></li>
     </ul>
   </section>
-  <section>
+  <section class="footer-block__content">
     <h5>Memberships</h5>
     <ul>
       <li><a href="">Gold membership</a></li>
