--- a/CSS/style.css
+++ b/CSS/style.css
@@ -274,29 +274,36 @@ h3 {
 }
 
 /*Footer*/
-footer {
+.footer-block {
   padding: 5rem;
   background-color: black;
 }
-footer .footer__logo {
+.footer-block .footer-block__logo {
   text-align: center;
   padding-right: 5rem;
+  color: gray;
 }
-footer h5 {
+.footer-block .footer-block__logo:hover {
+  color: #0d86ca;
+}
+.footer-block .footer-block__content {
+  margin-right: 1.5rem;
+}
+.footer-block .footer-block__content h5 {
   font-family: "Poppins", sans-serif;
   font-size: 3.6rem;
   margin-bottom: 1rem;
   font-weight: bold;
 }
-footer ul {
+.footer-block .footer-block__content ul {
   list-style: none;
   padding-left: 0;
   margin: 0;
 }
-footer a {
+.footer-block .footer-block__content a {
   color: gray;
 }
-footer a:hover {
+.footer-block .footer-block__content a:hover {
   color: #0d86ca;
 }
 
@@ -409,6 +416,17 @@ footer a:hover {
 @media screen and (max-width: 700px) {
   .membership-block h4 {
     font-size: 5rem;
+  }
+}
+/*Footer*/
+@media screen and (max-width: 700px) {
+  .footer-block .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .footer-block .footer-block__logo {
+    order: 2;
+    margin-top: 2rem;
   }
 }
 
