--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -120,3 +120,18 @@
     }
   }
 }
+
+/*Footer*/
+@media screen and (max-width: 700px) {
+  .footer-block {
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .footer-block__logo {
+      order: 2;
+      margin-top: 2rem;
+    }
+  }
+}
