--- a/Components/Calorie-calculater-block.html
+++ b/Components/Calorie-calculater-block.html
@@ -4,15 +4,25 @@
       <h3>Day calorie calculater</h3>
       <label for="html">Age</label>
       <br />
-      <input type="text" class="input" placeholder="Age..." />
+      <input type="text" class="input" id="Age" placeholder="Age..." />
       <br />
       <label for="html">Height</label>
       <br />
-      <input type="text" class="input" placeholder="Heigh in cm..." />
+      <input
+        type="text"
+        class="input"
+        id="Height"
+        placeholder="Heigh in cm..."
+      />
       <br />
       <label for="html">Weight</label>
       <br />
-      <input type="text" class="input" placeholder="Weight in Kg..." />
+      <input
+        type="text"
+        class="input"
+        id="Weight"
+        placeholder="Weight in Kg..."
+      />
       <br />
       <label for="cars">Gender</label>
       <select name="cars" id="Gender">
