--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -49,12 +49,15 @@
 @media screen and (max-width: 700px) {
   .Nav-and-hero-block {
     .hero {
-      overflow: auto;
+      overflow: hidden;
       .hero__trasparent-block {
         width: 100vw;
-        overflow: auto;
+        overflow: hidden;
+
         .hero__content {
+          bottom: 15%;
           left: 10%;
+          overflow: hidden;
           h1 {
             font-size: 6.5rem;
           }
