--- a/SCSS/_Mobile.scss
+++ b/SCSS/_Mobile.scss
@@ -26,10 +26,13 @@
       right: 1rem;
       background-color: white;
     }
+
     .nav__content {
       width: 100%;
       height: 0rem;
       overflow: hidden;
+      opacity: 0.5;
+      transition: height 0.5s opacity 0.2s;
     }
     ul {
       width: 100%;
@@ -40,6 +43,7 @@
       margin: 0;
     }
     .nav__content-open {
+      opacity: 1;
       height: 100%;
     }
   }
